The TUN/TAP approach likely isn't going to work because tap interfaces have their own queues. Ugh.  However, the port-based approach also doesn't seem to be working.